# AnnexRemote

./: .autorc  .codespellrc  .envrc  .gitattributes  .gitignore  .pre-commit-config.yaml  AnnexRemote.py  CHANGELOG.md  MANIFEST.in  README.md  annexremote.py  flake.nix  index.html  pyproject.toml  renovate.json  setup.cfg  setup.py
.github/workflows/: black.yml  python-package.yml  python-publish.yml  release.yml  unittests.yml
annexremote/: __init__.py  _version.py  annexremote.py  key.py
annexremote/remotes/: git_annex_remote_directory.py  git_annex_remote_requests.py  requests_remote_flask_app.py
docs/: config.mako  index.html
docs/annexremote/: annexremote.html  index.html
examples/: git-annex-remote-directory  git-annex-remote-example  test_git-annex-remote-directory
tests/: annexremote.py  test_AnnexRemoteSetup.py  test_GitAnnexRequestMessages.py  test_SpecialRemoteMessages.py  test_SpecialRemoteReplies.py  test_git-annex-remote-directory  test_git-annex-remote-requests  utils.py
